crates/oxc_css_parser/tests/error/selectors/invalid-nth-matcher-1.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `)`, but found `<ident>`
  ┌─ invalid-nth-matcher-1.css:1:17
  │
1 │ :nth-child(even ofa) {}
  │                 ^^^


